--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,4 +1,4 @@
-/*@import '~antd/dist/antd.css';*/
+@import '~antd/dist/antd.css';
 .ant-carousel .slick-slide {
     text-align: center;
     overflow: hidden;
@@ -37,6 +37,7 @@
     height: 10px;
     border-radius: 50%;
 }
+
 .ant-carousel-vertical  .slick-dots li {
     margin: 0 -4px;
 }
