--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ code {
 html{
   -webkit-overflow-scrolling : touch;
   position: fixed;
-  overflow: hidden;
+  /*overflow: hidden;*/
+  overflow: auto;     /* winphone8和android4+ */
+  /*-webkit-overflow-scrolling: touch;    !* ios5+ *!*/
   height: 100vh;
 }
