--- a/src/css/bloghomepage.css
+++ b/src/css/bloghomepage.css
@@ -1,8 +1,10 @@
 @import '~antd/dist/antd.css';
 .paper-layout{
     border:1px solid #fbd1d1;
+    padding:2rem;
+    background-color: white;
     margin: 1rem;
-    overflow: hidden;
+    box-shadow: 10px 10px 5px #d6d5d5;
 }
 .paper-footer-readmore{
     border-radius: 30px;
@@ -27,14 +29,21 @@
 .paper-footer{
     margin: 0.5rem 0;
 }
+.paper-sider-img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
 .paper-sider-img{
     height: auto;
     width: 100%;
 }
+.paper-sider-words:hover{
+    height: auto;
+    font-size: 1.2rem;
+}
 .paper-sider-words{
     text-align: justify;
     font-size: 1.15rem;
-    height: 12rem;
     overflow: hidden;
 }
 .paper-title{
@@ -43,4 +52,32 @@
 }
 .paper-footer-readmore{
     font-size: 1rem;
+}
+
+/*.col-sm-* 小屏幕 平板 (≥768px)*/
+@media screen and (max-width: 992px) and (min-width: 768px){
+    .ant-pagination-item {
+        height: 2.8rem;
+        line-height: 2.8rem;
+        width: 2.8rem;
+    }
+    .ant-pagination-prev, .ant-pagination-next {
+        height: 2.8rem;
+        line-height: 2.8rem;
+        width: 2.8rem;
+    }
+}
+/*.col-md-* 中等屏幕 桌面显示器 (≥992px)*/
+/*.col-lg-* 大屏幕 大桌面显示器 (≥1200px)*/
+@media screen and (min-width: 992px) {
+    .ant-pagination-item {
+        height: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+    }
+    .ant-pagination-prev, .ant-pagination-next{
+        height: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+    }
 }
