--- a/src/css/bloghomepage.css
+++ b/src/css/bloghomepage.css
@@ -6,9 +6,6 @@
     margin: 1rem;
     box-shadow: 10px 10px 5px #d6d5d5;
 }
-.paper-footer-readmore{
-    border-radius: 30px;
-}
 .paper-header-words{
     color: grey;
     padding-left: 0.2rem;
@@ -53,6 +50,7 @@
 
 /*.col-sm-* 小屏幕 平板 (≥768px)*/
 @media screen and (max-width: 992px){
+    /*分页信息*/
     .ant-pagination-item {
         height: 2.8rem;
         line-height: 2.8rem;
@@ -84,6 +82,7 @@
         font-size: 1.5rem !important;
     }
 }
+/*文章详情*/
 .paper-detail-body section{
     background-color: white;
     margin-top: 2rem;
@@ -93,4 +92,9 @@
     height: auto;
     max-width: 100%;
     max-height: 100%;
+}
+/*文章分类列表*/
+.detail-type-list{
+    font-size: 2rem;
+    cursor: pointer;
 }
