--- a/src/css/bloghomepage.css
+++ b/src/css/bloghomepage.css
@@ -3,7 +3,14 @@
     border:1px solid #fbd1d1;
     padding:2rem;
     background-color: white;
-    margin: 1rem;
+    margin: 1rem 0;
+    box-shadow: 10px 10px 5px #d6d5d5;
+}
+.paper-img-layout{
+    border:1px solid #fbd1d1;
+    padding:2rem;
+    background-color: white;
+    margin: 1rem 0;
     box-shadow: 10px 10px 5px #d6d5d5;
 }
 .paper-header-words{
@@ -97,4 +104,20 @@
 .detail-type-list{
     font-size: 2rem;
     cursor: pointer;
+}
+/*关于*/
+.about-list-words{
+    font-size: 1.5rem;
+}
+.ant-collapse-header{
+    background-color: white;
+}
+.ant-collapse-content-box{
+    color: #888;
+    background-color: #eae6f3;
+    border-left: 0.7rem solid #beacf3;
+    padding: .2rem .3rem;
+    position: relative;
+    text-indent: 2em;
+    margin: 0;
 }
